--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
 
 <div id="overlay" onclick="closeCard()">
     <div class="card-content">
-        <h1 style="color: gold; font-size: 3rem;">Happy Birthday! ✨</h1>
-        <p style="font-size: 1.3rem; line-height: 1.8;">Chúc mừng sinh nhật bạn! Chúc bạn tuổi mới luôn ngập tràn niềm vui, sức khỏe dồi dào và vạn sự như ý.</p>
-        <p style="font-size: 1.1rem; opacity: 0.8;">(Chạm vào bất cứ đâu để đóng thiệp)</p>
+        <h1 style="color: gold; font-size: 3rem;">Happy Birthday!</h1>
+        <p style="font-size: 1.3rem; line-height: 1.8;">snvvnghen chúc tiền vào như nước sống lâu trăm tuổi đợi tui vô sg chung vui với</p>
+        <p style="font-size: 1.1rem; opacity: 0.8;">(Đóng)</p>
     </div>
 </div>
 
@@ -283,3 +283,4 @@
 </script>
 </body>
 </html>
+
