--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         
         <div class="wishes-container">
             <div class="wish-box">
-                <div class="wish-text">Chúc mừng sinh nhật Puri/Ria/Păn/Pưn/Phương/Naphuong/Naph/PAN/ương/Mèo/Fel/P whatever. Chúc cậu luôn tuyệt vời và ngày càng tuyệt vời hơn nhé, người mồ côi cha mạnh nhất mình biết &gt;&lt;</div>
+                <div class="wish-text">Chúc mừng sinh nhật Puri/Ria/Păn/Pưn/Phương/Naphuong/Naph/PAN/ Pương/Mèo/Fel/P whatever. Chúc cậu luôn tuyệt vời và ngày càng tuyệt vời hơn nhé, người mồ côi cha mạnh nhất mình biết &gt;&lt;</div>
                 <span class="sender-name">— thồn lành</span>
             </div>
 
@@ -257,18 +257,18 @@
             </div>
 
             <div class="wish-box">
-                <div class="wish-text">placeholder</div>
+                <div class="wish-text">Chúc Mèl tuổi mới gặp nhiều may mắn sigma, CÓ NHIỀU SỨC KHỎE. Hữu duyên mcyt angst eliluchi ohio và ĂN NHIỀU VAOÒ!!!!!!!!!!!!!! :3333333333333</div>
+                <span class="sender-name">— Bông</span>
+            </div>
+
+            <div class="wish-box">
+                <div class="wish-text">Nah rất vui vì có Mel là 1 phần của CnB, chúc mừng sinh nhật, cầu cho mọi may mắn tiền tài tới với Mel nhé .</div>
                 <span class="sender-name">— Nah</span>
             </div>
 
             <div class="wish-box">
                 <div class="wish-text">placeholder</div>
-                <span class="sender-name">— Thong</span>
-            </div>
-
-            <div class="wish-box">
-                <div class="wish-text">placeholder</div>
-                <span class="sender-name">— Chi</span>
+                <span class="sender-name">— sender</span>
             </div>
         </div>
 
