--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                 <span class="sender-name">— Nah</span>
             </div>
 
-            <div> class="wish-box">
+            <div class="wish-box">
                 <div class="wish-text">Mừng em sinh nhật vui vẻ nha 🥺 Cỏ mới biết nhiều về em hơn cách đây không lâu dù mình add từ tám hoánh rồi, nhưng thiệt sự cỏ rất mừng vì em đã nch với cỏ á. Dù chỉ mới quen thân hơn được 1 khoảng ngắn nhưng cỏ nhận ra được em là một người vô cùng hoạt bát, em cũng rất hay trong việc chủ động tìm kiếm bạn bè và làm thân, và cũng là 1 người bạn siêu dễ thương luôn...bằng chứng dễ thấy nhất là việc em dễ thương như nào thì bạn em sẽ như thế, tại nếu đó k phải sự thật thì em cũng không nhận được lời nhắn này đâu á. Trừ việc đó thì qua quá trình nói chuyện với em thì cỏ cũng thấy được sự nhiệt huyết của em, cỏ cũng siêu ngưỡng mộ cái này...Mong em không bao giờ mất đi ngọn lửa đó nè.
                     Chúc em mọi ngày đều thiệt thiệt tuyệt vời, và cứ ngước đầu nhìn trời tiếp đi em.  </div>
                 <span class="sender-name">— Cỏ</span>
@@ -279,7 +279,7 @@
 
            <div class="wish-box">
                 <div class="wish-text">Hello em, Chúc mừng sinh nhật vui vẻ nhé. Tao thì không có vòng vo, vô thẳng luôn, tao chúc mày tuổi mới tràn đầy niềm vui, và cuộc sống cũng nhẹ nhàng với mày hơn. Mày là người tốt P ạ, chỉ là mày không thấy rõ việc đó cho lắm, mà người tốt thì xứng đáng được có kết cục tốt đẹp mà? Chúc mày tìm được bến đỗ tinh thần, người cho mày tình yêu như mày trao cho họ, chứ tao thấy mày cần lắm rồi đấy cục cưng. Tao nghĩ mày xứng đáng với điều đó mà, nhất là khi mày ở đó cho mọi người. À, chúc mày có nhiều tiền nữa nhé để trả nợ cho tbm (đùa th) (chắc v) vì mày có năng lực mà, cố lên, rồi một ngày nhận comm Vgen 5 củ, hì hì.
-                   Chúc em vui vẻ nhé, iu e"</div>
+                   Chúc em vui vẻ nhé, iu e</div>
                 <span class="sender-name">— Tuộc</span>
             </div>
 
@@ -457,4 +457,5 @@
 </script>
 </body>
 </html>
+
 
