--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     .marquee {
         display: inline-block;
-        animation: marquee 12s linear infinite;
+        animation: marquee 8s linear infinite;
         padding-right: 67px;
     }
 
@@ -102,7 +102,7 @@
         gap: 15px; z-index: 50; pointer-events: none;
     }
 
-    .item {
+    .item, .spawned-ensure {
         opacity: 0; transform: scale(0) translateY(50px);
         transition: opacity 1s ease, transform 1s cubic-bezier(0.34, 1.56, 0.64, 1);
         cursor: pointer; pointer-events: auto;
@@ -371,6 +371,11 @@ no matter what, don't forget how much i loooove you!! and how especial you areee
 happy birthday, ria  🎉✨ </div>
                 <span class="sender-name">— Valentine</span>
             </div>
+
+            <div class="wish-box">
+                <div class="wish-text">Chúc mừng sinh nhật Mèo gong xi pha gót 🦶🦶🦶 Tuổi mới new you new yaoi 🔥 Chúc Mèo ngày sinh nhật và những ngày sau đó vui vẻ. Mong những điều tốt đẹp sẽ đến với Mèo và ít phiền bận với những bất trắc trong cuộc sống (và đừng để bị mấy th khối vuông queerbait như t)🐪 Chúc Mèo làm ăn buôn may bán đắt tiền với yaoi vô ào ào để sục yaoi và mua ensure và nuôi tui :3333 giờ thì hop on idv rank thôi bro</div>
+                <span class="sender-name">— Thư</span>
+            </div>
             
         </div>
 
@@ -435,7 +440,7 @@ happy birthday, ria  🎉✨ </div>
                     setTimeout(() => {
                         nameEl.classList.add('spotify-marquee');
                         infoContainer.classList.add('is-scrolling');
-                        nameEl.style.animation = "marquee 12s linear infinite";
+                        nameEl.style.animation = "marquee 8s linear infinite";
                     }, 3000); 
                 }
             }, 200);
@@ -582,3 +587,4 @@ happy birthday, ria  🎉✨ </div>
 </script>
 </body>
 </html>
+
