--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="format-detection" content="telephone=no">
 <title>Happy Birthday✨</title>
 <style>
     * { box-sizing: border-box; }
@@ -587,4 +588,5 @@ happy birthday, ria  🎉✨ </div>
 </script>
 </body>
 </html>
+
 
