--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
         <div class="wishes-container">
             <div class="wish-box">
                 <div class="wish-text">Chúc mừng sinh nhật Puri/Ria/Păn/Pưn/Phương/Naphuong/Naph/PAN/ Pương/Mèo/Fel/P whatever. Chúc cậu luôn tuyệt vời và ngày càng tuyệt vời hơn nhé, người mồ côi cha mạnh nhất mình biết &gt;&lt;</div>
-                <span class="sender-name">— thồn lành</span>
+                <span class="sender-name">— tui đó hello</span>
             </div>
 
             <div class="wish-box">
@@ -329,7 +329,7 @@
             </div>
 
             <div class="wish-box">
-                <div class="wish-text">Nah rất vui vì có Mel là 1 phần của CnB, chúc mừng sinh nhật, cầu cho mọi may mắn tiền tài tới với Mel nhé .</div>
+                <div class="wish-text">Nah rất vui vì có Mel là 1 phần của CnB, chúc mừng sinh nhật, cầu cho mọi may mắn tiền tài tới với Mel nhé.</div>
                 <span class="sender-name">— Nah</span>
             </div>
 
@@ -588,5 +588,6 @@ happy birthday, ria  🎉✨ </div>
 </script>
 </body>
 </html>
+
 
 
