--- a/index.html
+++ b/index.html
@@ -382,6 +382,12 @@ happy birthday, ria  🎉✨ </div>
                 <div class="wish-text">Chúc mừng sinh nhật Mèo gong xi pha gót 🦶🦶🦶 Tuổi mới new you new yaoi 🔥 Chúc Mèo ngày sinh nhật và những ngày sau đó vui vẻ. Mong những điều tốt đẹp sẽ đến với Mèo và ít phiền bận với những bất trắc trong cuộc sống (và đừng để bị mấy th khối vuông queerbait như t)🐪 Chúc Mèo làm ăn buôn may bán đắt tiền với yaoi vô ào ào để sục yaoi và mua ensure và nuôi tui :3333 giờ thì hop on idv rank thôi bro</div>
                 <span class="sender-name">— Thư</span>
             </div>
+
+           <div class="wish-box">
+                <div class="wish-text">kh biet nua</div>
+                <span class="sender-name">— Hy</span>
+            </div>
+
             
         </div>
 
@@ -593,6 +599,7 @@ happy birthday, ria  🎉✨ </div>
 </script>
 </body>
 </html>
+
 
 
 
